--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,8 +1,16 @@
-p2mp: sender.o main.o
-	clang++ -std=c++17 -g -o p2mp.out Sender.o main.o
+all: p2mpclient p2mpserver
 
-main.o: Sender.h main.cpp
-	clang++ -std=c++17 -g -c main.cpp
+p2mpserver: receiver.o main_receiver.o
+	clang++ -std=c++17 -g -o p2mpserver.out Receiver.o main_receiver.o
+
+p2mpclient: sender.o main_sender.o
+	clang++ -std=c++17 -g -o p2mpclient.out Sender.o main_sender.o
+
+main_receiver.o: Receiver.h main_receiver.cpp
+	clang++ -std=c++17 -g -c main_receiver.cpp
+
+main_sender.o: Sender.h main_sender.cpp
+	clang++ -std=c++17 -g -c main_sender.cpp
 
 receiver.o: Receiver.h Receiver.cpp
 	clang++ -std=c++17 -g -c Receiver.cpp
