--- a/project2/Makefile
+++ b/project2/Makefile
@@ -4,7 +4,7 @@ p2mpserver: receiver.o main_receiver.o
 	g++ -std=c++17 -g -o p2mpserver.out Receiver.o main_receiver.o
 
 p2mpclient: main_sender.cpp
-	g++ -std=c++17 -pthread -fsanitize=address -g -o p2mpclient.out main_sender.cpp
+	g++ -std=c++17 -pthread -g -o p2mpclient.out main_sender.cpp
 
 main_receiver.o: Receiver.h main_receiver.cpp
 	g++ -std=c++17 -g -c main_receiver.cpp
